tests/errors/allocate_incomplete_type.c
int main()
{
	void x;
	struct A b;
	extern int c[]; /* this one is ok */
	int d[];
}